k8s/overlays/production-direct/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingcrm
  namespace: pingcrm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - domain.com
      secretName: pingcrm-tls
  rules:
    - host: domain.com
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: reverb
                port:
                  number: 8080
          - path: /apps
            pathType: Prefix
            backend:
              service:
                name: reverb
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 8000
